--- a/style.css
+++ b/style.css
@@ -1,8 +1,11 @@
 *{
     font-family: 'Anton', sans-serif;
 }
+
+
 .bg-col{
     background:#000;
+    box-shadow: 2px 2px 5px #000;
 }
 .nav-a{
         display: block;
@@ -18,7 +21,6 @@
     .nav-a a{
         font-size: 20px;
     }
-    
 }
 .nav-a:hover{
     color: #ff7504;
@@ -30,12 +32,20 @@
     width:70px;
     height: 70px;
 }
-.article_carouser{
-   display: block;
-}
 .w_img{
     width: 100%;
-    height: 50vw;
+    height: 40vw;
+
+
+}
+.main-header{
+    background: url(./multimedia/imagenes/backgroud.jpg);
+    background-size:cover;
+    min-height: 600px;
+}
+.background-overlay{
+    background: rgba(255, 159, 67,.4);
+    min-height: 600px;
 
 }
 .title__h2{
@@ -50,4 +60,21 @@
     font-size:3vw;
     width: 100%;
     padding: 10px;
+}
+.text-decoration{
+    text-decoration: none;
+    text-transform: uppercase;
+    color: #fff;
+}
+.p-footer{
+    color: #f75f07;
+    font-size: 2vw;
+}
+.text-decoration i{
+    font-size: 2vw;
+}
+
+footer{
+    border: 2px solid #f75f07;
+    margin-top: 30px;
 }
