--- a/style.css
+++ b/style.css
@@ -31,11 +31,11 @@
 .img__nav{
     width:70px;
     height: 70px;
+
 }
 .w_img{
     width: 100%;
     height: 40vw;
-
 
 }
 .main-header{
@@ -66,12 +66,157 @@
     text-transform: uppercase;
     color: #fff;
 }
+
+/*desde aca noticias*/
+
+.h1__noticia{
+    text-align: center;
+    padding: 30px;
+    font-size: 80px;
+    color: #f75f07;
+    background: #000;
+}
+
+.container__gird{
+    display: grid;
+    flex-wrap: wrap;
+    width: 100%;
+    height: 100%;
+  grid-template-columns: 1fr 1fr 1fr 1fr ;
+  grid-template-rows:repeat(200px * 5);
+}
+@media only screen and (max-width:500px){
+    .container__gird{
+        display: block;
+    }
+}
+
+.article__1{
+    grid-row:1 / 2 ;
+    grid-column:1 / 5 ;
+    display: flex;
+    flex-direction:row;
+    justify-content: last baseline;
+    align-items: center;
+    background:linear-gradient(to left,#fff,transparent);
+    margin: 30px;
+}
+
+.article__p1{
+    font-size:1em;
+    margin: 10px;
+}
+.img__article-1{
+    width: 40vw;
+    height: 100%;
+    object-fit: cover;
+
+}
+.article__2{
+    grid-row:2 / 3 ;
+    grid-column:1 / 3 ;
+    display: flex;
+    flex-direction:column;
+    justify-content: space-around;
+    align-items: center;
+    border: 1px solid #000;
+    background:linear-gradient(to bottom,#fff,transparent);
+    padding: 50px;
+    margin: 30px;
+
+}
+
+.article__p2{
+    font-size:1em;
+    margin: 10px;
+}
+.img__article-2{
+    width: 60%;
+    height: 50%;
+    object-fit: cover;
+    border: 3px solid #fff;
+}
+.article__3{
+    grid-row:3 / 4 ;
+    grid-column:1 / 3 ;
+    display: flex;
+    flex-direction:column;
+    justify-content: space-around;
+    align-items: center;
+    border: 1px solid #000;
+    background:linear-gradient(to top,#fff,transparent);
+    padding: 50px;
+    margin: 30px;
+
+}
+
+.article__p3{
+    font-size: 1em;
+    margin: 10px;
+}
+.img__article-3{
+    width: 70%;
+    height: 50%;
+    object-fit: cover;
+    border: 3px solid #fff;
+}
+.article__4{ 
+    grid-row:4 / 6 ;
+    grid-column:1 / 6 ;
+    display: flex;
+    flex-direction:column;
+    justify-content: space-around;
+    align-items: center;
+    border: 2px solid #600;
+    background:linear-gradient(to top,#fff,transparent);
+    padding: 50px;
+    margin: 30px;
+}
+.article__p4{
+    color: #d30000;
+    font-size: 3em;
+
+}
+.img__article-4{
+    width: 90%;
+    height: 50%;
+    object-fit: cover;
+    border: 3px solid #fff;
+}
+
+.article__5{ 
+    grid-row:2 / 4 ;
+    grid-column: 3 / 5;
+    display: flex;
+    flex-direction:column;
+    justify-content: space-around;
+    align-items: center;
+    border: 1px solid #000;
+    background:linear-gradient(to top,rgb(216, 207, 207),transparent);
+    margin: 30px;
+}
+.article__p5{
+    font-size:2em;
+    margin: 10px;
+
+}
+.img__article-5{
+    width: 100%;
+    height: 70%;
+    object-fit: cover;
+    border: 3px solid #fff;
+}
+
+
+
+/*footer*/
 .p-footer{
     color: #f75f07;
     font-size: 2vw;
 }
 .text-decoration i{
     font-size: 2vw;
+   
 }
 
 footer{
