--- a/style.css
+++ b/style.css
@@ -434,11 +434,24 @@ color: #fff;
 .bg-color{
     background: rgba(105, 105, 105, 0.7);
 }
+.row-gird{
+    --bs-gutter-x: 1.5rem;
+    --bs-gutter-y: 0;
+   display: flex;
+    flex-wrap: wrap;
+    margin-top: calc(-1 * var(--bs-gutter-y));
+    margin-right: calc(-.5 * var(--bs-gutter-x));
+    margin-left: calc(-.5 * var(--bs-gutter-x));
+}
 @media only screen and(max-width:780px){
-    .servicio-fila{
-        width: 100% !important;
+    #article__responsive{
+        display: block  !important;
     }
     
+    .servicio-fila{
+        width: 100% !important;
+        text-align: center;
+    }  
 }
 /*footer*/
 .p-footer{
