--- a/scss/carpetas/_accesorios.scss
+++ b/scss/carpetas/_accesorios.scss
@@ -1,5 +1,5 @@
 .bg-img{
-    background: url(../multimedia/imagenes/backgroud.jpg);
+    background: url(../../multimedia/imagenes/backgroud.jpg);
     width: 100%;
     height: 100%;
     background-size:contain;
