--- a/scss/base/_mapas.scss
+++ b/scss/base/_mapas.scss
@@ -1,3 +1,4 @@
+/*utlizados en home en la clase.background-overlay */
 $standard:(
     bg-standard: rgba(255, 159, 67,.4),
     bx-shadow: 2px 2px 5px rgba(255, 159, 67,.4),
