--- a/scss/base/extends.scss
+++ b/scss/base/extends.scss
@@ -1,4 +1,12 @@
+/*utizado el seccion noticias.html .article1,2,3,4,5*/
 %border-notice{
     border: 1px solid #000;
     border-radius: 2%;
+}
+%noticias-propit{
+    text-align: center;
+    padding: 30px;
+    font-size: 80px;
+    color: #f75f07;
+    background: #000;
 }
