--- a/scss/carpetas/_home.scss
+++ b/scss/carpetas/_home.scss
@@ -35,7 +35,7 @@
 .main-header{
     background: url(../multimedia/imagenes/backgroud.jpg);
     background-size:cover;
-    min-height: 600px;
+    min-height: auto;
     .location-fa i{
         position:fixed;
         font-size: 50px;
