--- a/scss/carpetas/_modelos.scss
+++ b/scss/carpetas/_modelos.scss
@@ -1,6 +1,11 @@
 /*MODELOSS*/
 @import '../base/mixins';
 
+.carousel__content{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
 .backg-img{
     background: url(../multimedia/imagenes/1366_2000.jpg);
     @include background(no-repeat, 100% 100%);
@@ -12,7 +17,7 @@
             display:grid;
             grid-template-columns:1fr 1fr 1fr 1fr ;
             grid-template-rows:200px 200px 200px;
-            
+
             @media only screen and (max-width:500px){
                 display: block;
             }
@@ -43,8 +48,6 @@
         
         }
     }
-
-
 
 .backg-img_2{
     background: url(../multimedia/imagenes/ktmadventure.jpg);
@@ -96,7 +99,7 @@
             margin-top: 10px;
             display:grid;
             grid-template-columns:1fr 1fr 1fr 1fr ;
-            grid-template-rows:200px 200px;
+            grid-template-rows:200px 200px 100px;
             .article__supersport-h2{
                 color: hsl(24, 100%, 50%);
                 background-color: #000;
@@ -111,7 +114,7 @@
                 font-size:1.9vw;
                 padding: 10px;
                 grid-column:1 / 3 ;
-                grid-row:2 / 3 ;
+                grid-row:2 / 4 ;
                 @media only screen and (max-width:500px){
                     font-size:3vw;
                 }
