--- a/scss/carpetas/_footer.scss
+++ b/scss/carpetas/_footer.scss
@@ -1,20 +1,47 @@
-footer{
-    border: 2px solid #f75f07;
+.p__footer{
+    font-size: 1vw;
+    text-align: center;
+    padding: 1em;
     margin-top: 30px;
-    .p-footer{
-        color: #f75f07;
-        font-size: 2.5vw;
+    border-top: 2px dotted #615f5e;
+    color: #615f5e; 
+}
+.bg-color{
+    background-color: black;
+    border-top: 2px solid rgb(253, 104, 4);
+    .footer__ul-redes{
+        list-style: none;
+        .footer__li-redes{
+            margin: 10px;
+        }
+        .footer__li-redes a{
+            font-size: 20px;
+            color: #fff;
+            margin: 10px;
+            text-decoration: none;
+            &:hover{
+                color: #555;
+            }
+        }
     }
-    .text-decoration{
-        text-decoration: none;
-        text-transform: uppercase;
+    .derechos__container span{
+        display: none;
+        background-color: rgb(248, 126, 12);
+        color: #000;
+        border-radius: 2px;
+        border: 2px solid rgb(0, 0, 0);
+    }
+    .derechos__container{
+        margin: 20px;
+        font-size: 20px;
         color: #fff;
-        font-size: 30px;
-        &:hover{
-            color: #f75f07;
-        }
-        .text-decoration i{
-            font-size: 2vw;  
+        text-decoration: none;
+        transition: 2s;
+        &:hover > span{
+            display: block;
+           
         }
     }
+
+
 }
