--- a/scss/carpetas/_accesorios.scss
+++ b/scss/carpetas/_accesorios.scss
@@ -1,10 +1,6 @@
-.bg-img{
-    background: url(../../multimedia/imagenes/backgroud.jpg);
-    width: 100%;
-    height: 100%;
-    background-size:contain;
-    background-repeat: space;
-    .bg-color{
-        background: rgba(105, 105, 105, 0.3);
-    }
+.bg-accesorios{
+    background-color: rgba(240, 248, 255, .6);
+    background-image: url(../multimedia/imagenes/adventurefull.jpg);
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
 }
