--- a/scss/carpetas/_footer.scss
+++ b/scss/carpetas/_footer.scss
@@ -8,40 +8,32 @@
 }
 .bg-color{
     background-color: black;
-    border-top: 2px solid rgb(253, 104, 4);
+    border-top: 2px solid rgb(252, 104, 5);
     .footer__ul-redes{
         list-style: none;
-        .footer__li-redes{
-            margin: 10px;
-        }
+        font-size: 3em;
+        color: #fff;
+        border-right: 1px solid #fff;
+
         .footer__li-redes a{
-            font-size: 20px;
-            color: #fff;
-            margin: 10px;
+            font-size: .4em;
+            color: rgba(255, 255, 255, 0.747);
             text-decoration: none;
             &:hover{
-                color: #555;
+                color: rgb(253, 115, 2);
             }
         }
     }
-    .derechos__container span{
-        display: none;
-        background-color: rgb(248, 126, 12);
-        color: #000;
-        border-radius: 2px;
-        border: 2px solid rgb(0, 0, 0);
-    }
-    .derechos__container{
-        margin: 20px;
-        font-size: 20px;
+    .footer__ul-location{
+        list-style: none;
+        font-size: 3em;
         color: #fff;
-        text-decoration: none;
-        transition: 2s;
-        &:hover > span{
-            display: block;
-           
-        }
-    }
+        .footer__li-location a{
+            font-size:.5em;
+            color: rgba(255, 255, 255, 0.747);
+            text-decoration: none;
 
+        }
+}
 
 }
