--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 @import url(https://fonts.googleapis.com/css?family=Montserrat);
+@import url(https://fonts.googleapis.com/css?family=Montserrat);
 * {
   font-family: "Anton", sans-serif;
 }
@@ -485,11 +486,13 @@ svg {
   grid-row: 2/4;
 }
 
+/*ACCESORIOS*/
 .bg-accesorios {
-  background-color: rgba(240, 248, 255, 0.6);
-  background-image: url(../multimedia/imagenes/adventurefull.jpg);
-  background-size: 100% 100%;
-  background-repeat: no-repeat;
+  background: linear-gradient(to top, #000, #555);
+}
+
+.bg-orange {
+  background: #ff7c01;
 }
 
 .p__footer {
