--- a/scss/carpetas/_accesorios.scss
+++ b/scss/carpetas/_accesorios.scss
@@ -1,6 +1,9 @@
+/*ACCESORIOS*/
+
 .bg-accesorios{
-    background-color: rgba(240, 248, 255, .6);
-    background-image: url(../multimedia/imagenes/adventurefull.jpg);
-    background-size: 100% 100%;
-    background-repeat: no-repeat;
+    background:linear-gradient(to top,#000,#555);
 }
+.bg-orange{
+    background: #ff7c01;
+}
+
