--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,16 +1,9 @@
-
-*{
-    font-family: 'Anton', sans-serif;   
- }
-
+@import url(https://fonts.googleapis.com/css?family=Montserrat);
+* {
+  font-family: "Anton", sans-serif;
+}
 @import 'carpetas/home';
 @import 'carpetas/noticias';
 @import 'carpetas/modelos'; 
 @import 'carpetas/accesorios';
 @import 'carpetas/footer';
-
-
-
-
-
-        
