--- a/css/style.css
+++ b/css/style.css
@@ -185,6 +185,10 @@ svg {
   background: #000;
 }
 
+.bg__noticias {
+  background-image: linear-gradient(#000, #555, #777);
+}
+
 .container__gird {
   display: grid;
   flex-wrap: wrap;
@@ -205,8 +209,8 @@ svg {
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  background: linear-gradient(to left, #fff, transparent);
   margin: 30px;
+  background: #fff;
 }
 .container__gird .article__1 .article__p1 {
   font-size: 1em;
@@ -224,9 +228,9 @@ svg {
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
-  background: linear-gradient(to bottom, #fff, transparent);
   padding: 50px;
   margin: 30px;
+  background: #fff;
 }
 .container__gird .article__2 .article__p2 {
   font-size: 1em;
@@ -245,9 +249,9 @@ svg {
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
-  background: linear-gradient(to top, #fff, transparent);
   padding: 50px;
   margin: 30px;
+  background: #fff;
 }
 .container__gird .article__3 .article__p3 {
   font-size: 1em;
@@ -268,10 +272,11 @@ svg {
   align-items: center;
   padding: 50px;
   margin: 30px;
+  background: #fff;
 }
 .container__gird .article__4 .article__p4 {
-  color: #d30000;
-  font-size: 2em;
+  color: #772121;
+  font-size: 1.7em;
 }
 .container__gird .article__4 .img__article-4 {
   width: 90%;
@@ -286,8 +291,8 @@ svg {
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
-  background: linear-gradient(to top, rgb(216, 207, 207), transparent);
   margin: 30px;
+  background: #fff;
 }
 .container__gird .article__p5 {
   font-size: 2em;
