--- a/scss/carpetas/_footer.scss
+++ b/scss/carpetas/_footer.scss
@@ -4,7 +4,7 @@
     padding: 1em;
     margin-top: 30px;
     border-top: 2px dotted #615f5e;
-    color: #615f5e; 
+    color: #505050; 
 }
 .bg-color{
     background-color: black;
