--- a/css/style.css
+++ b/css/style.css
@@ -220,6 +220,7 @@ svg {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  border: 3px solid #000;
 }
 .container__gird .article__2 {
   grid-row: 2/3;
@@ -240,7 +241,7 @@ svg {
   width: 60%;
   height: 50%;
   object-fit: cover;
-  border: 3px solid #fff;
+  border: 3px solid #000;
 }
 .container__gird .article__3 {
   grid-row: 3/4;
@@ -261,7 +262,7 @@ svg {
   width: 70%;
   height: 50%;
   object-fit: cover;
-  border: 3px solid #fff;
+  border: 3px solid #000;
 }
 .container__gird .article__4 {
   grid-row: 4/5;
@@ -282,7 +283,7 @@ svg {
   width: 90%;
   height: 50%;
   object-fit: cover;
-  border: 3px solid #fff;
+  border: 3px solid #000;
 }
 .container__gird .article__5 {
   grid-row: 2/4;
@@ -299,10 +300,10 @@ svg {
   margin: 10px;
 }
 .container__gird .img__article-5 {
-  width: 100%;
+  width: 90%;
   height: 70%;
   object-fit: cover;
-  border: 3px solid #fff;
+  border: 1px solid #000;
 }
 
 /*MODELOSS*/ /*utilizado en modelos.html en las clases .backg-img */
@@ -506,7 +507,7 @@ svg {
   padding: 1em;
   margin-top: 30px;
   border-top: 2px dotted #615f5e;
-  color: #615f5e;
+  color: #505050;
 }
 
 .bg-color {
