--- a/scss/carpetas/_noticias.scss
+++ b/scss/carpetas/_noticias.scss
@@ -35,6 +35,7 @@
                 width: 100%;
                 height: 100%;
                 object-fit: cover;
+                border: 3px solid #000;
             
             }
     }
@@ -57,7 +58,7 @@
             width: 60%;
             height: 50%;
             object-fit: cover;
-            border: 3px solid #fff;
+            border: 3px solid #000;
         }
     
     }
@@ -80,7 +81,7 @@
             width: 70%;
             height: 50%;
             object-fit: cover;
-            border: 3px solid #fff;
+            border: 3px solid #000;
         }
     
     }
@@ -104,7 +105,7 @@
             width: 90%;
             height: 50%;
             object-fit: cover;
-            border: 3px solid #fff;
+            border: 3px solid #000;
         }
         
     }
@@ -125,9 +126,9 @@
     
     }
     .img__article-5{
-        width: 100%;
+        width: 90%;
         height: 70%;
         object-fit: cover;
-        border: 3px solid #fff;
+        border: 1px solid #000;
     }
 }
