--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@
 
 .bg-col {
   background: #000;
-  box-shadow: 2px 2px 5px #002;
+  box-shadow: 2px 2px 5px #000;
 }
 
 .nav-a {
@@ -114,7 +114,8 @@
 }
 
 .container__2 {
-  background: linear-gradient(to left, rgb(95, 94, 94), transparent);
+  background: linear-gradient(to left, rgb(214, 209, 209), transparent);
+  box-shadow: 2px 2px 2px 7px #000;
 }
 
 /*animation*/
@@ -177,18 +178,37 @@ svg {
   border-radius: 2%;
 }
 
-.h1__noticia {
-  text-align: center;
-  padding: 30px;
-  font-size: 80px;
-  color: #f75f07;
-  background: #000;
-}
-
 .bg__noticias {
   background-image: linear-gradient(#000, #555, #777);
 }
 
+.h1__noticia {
+  color: hsla(0deg, 0%, 0%, 0.9);
+  font: normal 14vw Varela Round, sans-serif;
+  text-align: center;
+  text-transform: uppercase;
+  top: 50%;
+  width: 100%;
+  animation: move linear 2000ms infinite;
+}
+
+@keyframes move {
+  0% {
+    text-shadow: 4px -4px 0 #ff6600, 3px -3px 0 #ff6600, 2px -2px 0 #ff6600, 1px -1px 0 #ff6600, -4px 4px 0 #4d4c4c, -3px 3px 0 #4d4c4c, -2px 2px 0 #4d4c4c, -1px 1px 0 #4d4c4c;
+  }
+  25% {
+    text-shadow: -4px -4px 0 #4d4c4c, -3px -3px 0 #4d4c4c, -2px -2px 0 #4d4c4c, -1px -1px 0 #4d4c4c, 4px 4px 0 #ff6600, 3px 3px 0 #ff6600, 2px 2px 0 #ff6600, 1px 1px 0 #ff6600;
+  }
+  50% {
+    text-shadow: -4px 4px 0 #ff6600, -3px 3px 0 #ff6600, -2px 2px 0 #ff6600, -1px 1px 0 #ff6600, 4px -4px 0 #4d4c4c, 3px -3px 0 #4d4c4c, 2px -2px 0 #4d4c4c, 1px -1px 0 #4d4c4c;
+  }
+  75% {
+    text-shadow: 4px 4px 0 #4d4c4c, 3px 3px 0 #4d4c4c, 2px 2px 0 #4d4c4c, 1px 1px 0 #4d4c4c, -4px -4px 0 #962f00, -3px -3px 0 #962f00, -2px -2px 0 #962f00, -1px -1px 0 #962f00;
+  }
+  100% {
+    text-shadow: 4px -4px 0 #962f00, 3px -3px 0 #962f00, 2px -2px 0 #962f00, 1px -1px 0 #962f00, -4px 4px 0 #4d4c4c, -3px 3px 0 #4d4c4c, -2px 2px 0 #4d4c4c, -1px 1px 0 #4d4c4c;
+  }
+}
 .container__gird {
   display: grid;
   flex-wrap: wrap;
@@ -308,9 +328,11 @@ svg {
 
 /*MODELOSS*/ /*utilizado en modelos.html en las clases .backg-img */
 .carousel__content {
+  background: radial-gradient(#fc4700, rgb(238, 154, 84));
   display: flex;
   align-items: center;
   flex-direction: column;
+  padding: 4px;
 }
 @media only screen and (max-width: 500px) {
   .carousel__content .responsive_img {
@@ -318,6 +340,38 @@ svg {
   }
 }
 
+.span__animation-container {
+  text-transform: uppercase;
+  letter-spacing: 0.5em;
+  display: inline-block;
+  border: 4px double rgba(255, 255, 255, 0.25);
+  border-width: 4px 0;
+  top: 18%;
+}
+.span__animation-container .span__animation {
+  font: 700 4em/1 "Oswald", sans-serif;
+  letter-spacing: 0;
+  padding: 0.25em 0 0.325em;
+  display: block;
+  margin: 0 auto;
+  text-shadow: 0 0 80px rgba(255, 255, 255, 0.5);
+  background: url(https://i.ibb.co/RDTnNrT/animated-text-fill.png) repeat-y;
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -webkit-animation: aitf 80s linear infinite;
+  -webkit-transform: translate3d(0, 0, 0);
+  -webkit-backface-visibility: hidden;
+}
+
+@-webkit-keyframes aitf {
+  0% {
+    background-position: 0% 50%;
+  }
+  100% {
+    background-position: 100% 50%;
+  }
+}
 .backg-img {
   background: url(../multimedia/imagenes/1366_2000.jpg);
   background-repeat: no-repeat;
