--- a/scss/carpetas/_modelos.scss
+++ b/scss/carpetas/_modelos.scss
@@ -2,15 +2,48 @@
 @import '../base/mixins';
 
 .carousel__content{
+    background: radial-gradient(#fc4700, rgb(238, 154, 84));
     display: flex;
     align-items: center;
     flex-direction: column;
+    padding: 4px;
     .responsive_img{
         @media only screen and (max-width:500px){
                width: 100%;
         }
     }
 }
+.span__animation-container{
+    text-transform: uppercase;
+	letter-spacing: .5em;
+	display: inline-block;
+	border: 4px double rgba(255,255,255,.25);
+	border-width: 4px 0;
+	top: 18%;
+    .span__animation {
+
+        font: 700 4em/1 "Oswald", sans-serif;
+        letter-spacing: 0;
+        padding: .25em 0 .325em;
+        display: block;
+        margin: 0 auto;
+        text-shadow: 0 0 80px rgba(255,255,255,.5);  
+        background: url(https://i.ibb.co/RDTnNrT/animated-text-fill.png) repeat-y;
+        -webkit-background-clip: text;
+        background-clip: text;
+        -webkit-text-fill-color: transparent;
+        -webkit-animation: aitf 80s linear infinite;
+        -webkit-transform: translate3d(0,0,0);
+        -webkit-backface-visibility: hidden;
+  
+    }
+  }
+
+  @-webkit-keyframes aitf {
+      0% { background-position: 0% 50%; }
+      100% { background-position: 100% 50%; }
+  }
+
 .backg-img{
     background: url(../multimedia/imagenes/1366_2000.jpg);
     @include background(no-repeat, 100% 100%);
