--- a/scss/carpetas/_noticias.scss
+++ b/scss/carpetas/_noticias.scss
@@ -4,8 +4,78 @@
     background-image: linear-gradient(#000, #555, #777);
 }
 .h1__noticia{
-   @extend %noticias-propit;
-}
+    color: hsla(0, 0%, 0%, .9);
+    font: normal 14vw Varela Round, sans-serif;
+    text-align: center;
+    text-transform: uppercase;
+    top: 50%;
+    width: 100%;
+    animation: move linear 2000ms infinite;  
+  }
+  @keyframes move {
+    0% {
+      text-shadow:
+        4px -4px 0 #ff6600, 
+        3px -3px 0 #ff6600, 
+        2px -2px 0 #ff6600, 
+        1px -1px 0 #ff6600,
+        -4px 4px 0 #4d4c4c, 
+        -3px 3px 0 #4d4c4c, 
+        -2px 2px 0 #4d4c4c, 
+        -1px 1px 0 #4d4c4c
+      ;
+    }
+    25% {    
+      text-shadow:      
+        -4px -4px 0 #4d4c4c, 
+        -3px -3px 0 #4d4c4c, 
+        -2px -2px 0 #4d4c4c, 
+        -1px -1px 0 #4d4c4c,
+        4px 4px 0 #ff6600, 
+        3px 3px 0 #ff6600, 
+        2px 2px 0 #ff6600, 
+        1px 1px 0 #ff6600      
+      ;
+    }
+    50% {
+      text-shadow:
+        -4px 4px 0 #ff6600, 
+        -3px 3px 0 #ff6600, 
+        -2px 2px 0 #ff6600, 
+        -1px 1px 0 #ff6600,
+        4px -4px 0 #4d4c4c, 
+        3px -3px 0 #4d4c4c, 
+        2px -2px 0 #4d4c4c, 
+        1px -1px 0 #4d4c4c
+      ;
+    }
+    75% {
+      text-shadow:
+        4px 4px 0 #4d4c4c, 
+        3px 3px 0 #4d4c4c, 
+        2px 2px 0 #4d4c4c, 
+        1px 1px 0 #4d4c4c,
+        -4px -4px 0 #962f00, 
+        -3px -3px 0 #962f00, 
+        -2px -2px 0 #962f00, 
+        -1px -1px 0 #962f00      
+      ;
+    }
+    100% {
+      text-shadow:
+        4px -4px 0 #962f00, 
+        3px -3px 0 #962f00, 
+        2px -2px 0 #962f00, 
+        1px -1px 0 #962f00,
+        -4px 4px 0 #4d4c4c, 
+        -3px 3px 0 #4d4c4c, 
+        -2px 2px 0 #4d4c4c, 
+        -1px 1px 0 #4d4c4c
+      ;
+    }  
+  }
+
+
 .container__gird{
     display: grid;
     flex-wrap: wrap;
