--- a/scss/carpetas/_footer.scss
+++ b/scss/carpetas/_footer.scss
@@ -1,3 +1,4 @@
+
 .p__footer{
     font-size: 1vw;
     text-align: center;
@@ -7,6 +8,7 @@
     color: #505050; 
 }
 .bg-color{
+    width: 100%;
     background-color: black;
     border-top: 2px solid rgb(252, 104, 5);
     .footer__ul-redes{
